# NUBA

./: LICENSE  README.md  install.sh  nuba.py  setup.py
nuba_final/nuba/: CHANGELOG.md  INSTALL.md  LICENSE  Makefile  README.md  generate_files.py  nuba_cli.py  nuba_main.py  nuba_run.py  nuba_tools.py  pyproject.toml  setup.cfg  setup.py
nuba_final/nuba/algorithms/dp/: 01_fibonacci_dp.nu  02_knapsack_dp.nu  03_lcs_dp.nu  04_lis_dp.nu  05_edit_distance_dp.nu  06_matrix_chain_dp.nu  07_coin_change_dp.nu  08_word_break_dp.nu  09_partition_dp.nu  10_palindrome_dp.nu  11_rod_cutting.nu  12_egg_drop.nu  13_balloon_burst.nu  14_optimal_bst.nu  15_tsp_dp.nu  16_coloring_dp.nu  17_profile_dp.nu  18_digit_dp.nu  19_bitmask_dp.nu  20_sos_dp.nu
nuba_final/nuba/algorithms/geometry/: 01_convex_hull_algo.nu  02_point_in_polygon_algo.nu  03_line_intersection_algo.nu  04_closest_pair_algo.nu  05_voronoi_algo.nu  06_delaunay_algo.nu  07_sweep_line.nu  08_rotating_calipers.nu  09_minkowski_sum.nu  10_gjk.nu  11_chan_algo.nu  12_preparata_algo.nu  13_fortune_algo.nu  14_dcel.nu  15_half_plane.nu  16_polygon_clipping.nu  17_douglas_peucker.nu  18_ramer_algo.nu  19_tangent_lines.nu  20_circle_intersection.nu
nuba_final/nuba/algorithms/graph/: 01_bfs_algo.nu  02_dfs_algo.nu  03_dijkstra_algo.nu  04_bellman_ford_algo.nu  05_floyd_warshall.nu  06_a_star.nu  07_kruskal_algo.nu  08_prim_algo.nu  09_topological_sort_algo.nu  10_scc_tarjan.nu  11_scc_kosaraju.nu  12_bipartite_check_algo.nu  13_euler_circuit.nu  14_hamilton_path.nu  15_max_flow.nu  16_min_cut.nu  (+4 more)
nuba_final/nuba/docs/: syntax.md
nuba_final/nuba/examples/: algorithms.nu  binary_tree.nu  calculator.nu  classes.nu  control_flow.nu  data_pipeline.nu  decorators.nu  dicts.nu  errors.nu  events.nu  expr_eval.nu  fizzbuzz.nu  functional.nu  functions.nu  generics.nu  guess_game.nu  hello.nu  inheritance.nu  linked_list.nu  lists.nu  math_ops.nu  my.nu  observer.nu  pattern_match.nu  state_machine.nu  string_builder.nu  strings.nu  todo_app.nu  variables.nu
nuba_final/nuba/install/: install.sh  install_macos.sh  install_shebang.sh  install_windows.ps1
nuba_final/nuba/installer/: nuba.rb
nuba_final/nuba/nuba/: __init__.py  ast_nodes.py  builtins.py  environment.py  errors.py  formatter.py  interpreter.py  lexer.py  parser.py  repl.py  runner.py  tokens.py  typechecker.py  values.py
nuba_final/nuba/registry/: nuba.desktop  nuba_association.reg  x-nuba.xml
nuba_final/nuba/scripts/: nuba-env  nuba-format  nuba-lint  nuba-pkg
nuba_final/nuba/stdlib/: collections.nu  datetime.nu  io.nu  math.nu  random.nu  strings.nu
nuba_final/nuba/tests/: benchmark.nu  run_tests.py  test_features.nu  test_runner.nu
nuba_final/nuba/vscode_extension/: language-configuration.json  package.json
(+7100 files in other folders)
