[metadata]
name             = nuba-lang
version          = 1.0.0
description      = Nuba Programming Language — run .nu files like Python
long_description = file: README.md
long_description_content_type = text/markdown
author           = Nuba Language Project
author_email     = hello@nuba-lang.org
url              = https://nuba-lang.org
project_urls     =
    Documentation = https://docs.nuba-lang.org
    Source        = https://github.com/nuba-lang/nuba
    Tracker       = https://github.com/nuba-lang/nuba/issues
license          = MIT
keywords         = programming language interpreter nuba nu
classifiers      =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Compilers
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education

[options]
packages         = find:
python_requires  = >=3.8
include_package_data = True

[options.package_data]
nuba =
    stdlib/*.nu
    stdlib/**/*.nu

[options.entry_points]
console_scripts =
    nuba = nuba_cli:main

[options.packages.find]
exclude =
    tests*
    examples*
    docs*
